--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,47 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-</web-app>
+	<servlet> 
+		<servlet-name> 
+			Jersey REST Service 
+		</servlet-name> 
+ 
+		<servlet-class> 
+			com.sun.jersey.spi.container.servlet.ServletContainer 
+		</servlet-class> 
+ 
+		<init-param> 
+ 
+			<param-name> 
+				com.sun.jersey.config.property.packages 
+			</param-name> 
+ 
+			<param-value> 
+				java5775_5366_9373Service
+			</param-value> 
+ 
+		</init-param> 
+ 
+		<init-param> 
+ 
+			<param-name> 
+				com.sun.jersey.api.json.POJOMappingFeature 
+			</param-name> 
+ 
+			<param-value>true</param-value> 
+ 
+		</init-param> 
+ 
+		<load-on-startup>1</load-on-startup> 
+ 
+	</servlet> 
+ 
+	<servlet-mapping> 
+ 
+		<servlet-name>Jersey REST Service</servlet-name> 
+ 
+		<url-pattern>/api/*</url-pattern> 
+ 
+	</servlet-mapping> 
+ 
+</web-app> 
