--- a/.project
+++ b/.project
@@ -3,7 +3,7 @@
 	<name>java5775_5366_9373Service</name>
 	<comment></comment>
 	<projects>
-		<project>java5775_5366_9373</project>
+		<project>java5775_5366_9373Lib</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
